# Twonk

./: .gitmodules  AudioPluginHost.jucer  CMakeLists.txt  Twonk.jucer  update_binaries.bat
Builds/CLion/: CMakeLists.txt
Builds/CodeBlocksLinux/: Twonk.cbp  resources.rc
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2017/: Twonk.sln  Twonk_App.vcxproj  Twonk_App.vcxproj.filters  resources.rc
Builds/VisualStudio2019/: Twonk.sln  Twonk_App.vcxproj  Twonk_App.vcxproj.filters  resources.rc
InfoPliugin/: InfoPliugin.jucer
InfoPliugin/JuceLibraryCode/: AppConfig.h  JuceHeader.h
InfoPliugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
JUCE/: BREAKING-CHANGES.txt  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  LICENSE.md  Makefile  README.md  cmake_install.cmake
JUCE/.github/: ISSUE_TEMPLATE.txt
JUCE/doxygen/: Doxyfile  Makefile  README.txt  process_source_files.py
JUCE/extras/BLOCKS/: Makefile
JUCE/modules/: Makefile  cmake_install.cmake
JUCE/modules/juce_audio_plugin_client/: Makefile  cmake_install.cmake  juce_lv2_helper
JUCE/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
JUCE/tools/modules/: Makefile  cmake_install.cmake
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: HostStartup.cpp  Main.cpp  Test.cpp  Test.h  Twonk.h  TwonkChannel.cpp  TwonkChannel.h  TwonkLookAndFeel.cpp  TwonkLookAndFeel.h  TwonkMain.cpp  TwonkMain.h  TwonkPlayHead.cpp  TwonkPlayHead.h  TwonkSlider.cpp  TwonkSlider.h  TwonkToolbar.cpp  TwonkToolbar.h
Source/FX/: PluginParameter.h  TwonkFilters.cpp  TwonkFilters.h
Source/FX/Compressor/: TwonkCEEditor.cpp  TwonkCEEditor.h  TwonkCEProcessor.cpp  TwonkCEProcessor.h
Source/FX/DebugInfo/: TwonkDebugInfoEditor.cpp  TwonkDebugInfoEditor.h  TwonkDebugInfoProcessor.cpp  TwonkDebugInfoProcessor.h
Source/FX/Distortion/: TwonkDistortionEditor.cpp  TwonkDistortionEditor.h  TwonkDistortionProcessor.cpp  TwonkDistortionProcessor.h
Source/FX/FifteenStep/: FifteenStep.cpp  FifteenStep.h  FifteenStepEditor.cpp  FifteenStepEditor.h  FifteenStepHexRow.cpp  FifteenStepHexRow.h  FifteenStepHexStep.cpp  FifteenStepHexStep.h  FifteenStepProcessor.cpp  FifteenStepProcessor.h  FifteenStepRowHolder.cpp  FifteenStepRowHolder.h
Source/FX/Flanger/: TwonkFlangerEditor.cpp  TwonkFlangerEditor.h  TwonkFlangerProcessor.cpp  TwonkFlangerProcessor.h
Source/FX/JuceSampler/: BankEditor.cpp  BankEditor.h  CTAGSampler.cpp  CTAGSampler.h  CTAGSamplerSound.cpp  CTAGSamplerSound.h  CTAGSamplerVoice.cpp  CTAGSamplerVoice.h  InstrumentButton.cpp  InstrumentButton.h  InstrumentButtonsPanel.cpp  InstrumentButtonsPanel.h  InstrumentParametersEditor.cpp  InstrumentParametersEditor.h  InstrumentWaveViewer.cpp  InstrumentWaveViewer.h  JuceSamplerAudioProcessor.cpp  JuceSamplerAudioProcessor.h  JuceSamplerAudioProcessorEditor.cpp  JuceSamplerAudioProcessorEditor.h  PanPos.h  PluginProcessor.cpp  PluginProcessor.h
Source/FX/MIDI Controller/: HexagonController.cpp  HexagonController.h  MidiControllerEditor.cpp  MidiControllerEditor.h  MidiControllerProcessor.cpp  MidiControllerProcessor.h  PianoKeys.cpp  PianoKeys.h
Source/FX/Phaser/: TwonkPhaserEditor.cpp  TwonkPhaserEditor.h  TwonkPhaserProcessor.cpp  TwonkPhaserProcessor.h
Source/FX/Ping-Pong Delay/: TwonkPPDelayEditor.cpp  TwonkPPDelayEditor.h  TwonkPPDelayProcessor.cpp  TwonkPPDelayProcessor.h
Source/FX/Pitch Shift/: TwonkPSEditor.cpp  TwonkPSEditor.h  TwonkPSProcessor.cpp  TwonkPSProcessor.h
Source/FX/Ring Modulator/: TwonkRMEditor.cpp  TwonkRMEditor.h  TwonkRMProcessor.cpp  TwonkRMProcessor.h
Source/FX/Robotization-Whisperization/: STFT.h  TwonkRWEditor.cpp  TwonkRWEditor.h  TwonkRWProcessor.cpp  TwonkRWProcessor.h
Source/FX/SFZ/: ClickableLabel.cpp  ClickableLabel.h  SFZeroAudioProcessor.cpp  SFZeroAudioProcessor.h  SFZeroEditor.cpp  SFZeroEditor.h
Source/FX/SequencerLinear/: SequencerLinearEditor.cpp  SequencerLinearEditor.h  SequencerLinearProcessor.cpp  SequencerLinearProcessor.h
Source/FX/SimpleSampler/: SamplerSoundEditor.cpp  SamplerSoundEditor.h  SimpleSamplerEditor.cpp  SimpleSamplerEditor.h  SimpleSamplerProcessor.cpp  SimpleSamplerProcessor.h
Source/FX/midiLooper/Builds/Linux/: CMakeLists.txt
Source/Filters/: FilterGraph.cpp  FilterGraph.h  FilterIOConfiguration.cpp  FilterIOConfiguration.h  HostAudioProcessorPlayer.cpp  HostAudioProcessorPlayer.h  IOConfigurationWindow.cpp  IOConfigurationWindow.h  InternalFilters.cpp  InternalFilters.h  InternalPlugins.cpp  InternalPlugins.h  MidiPatternSequencer.cpp  MidiPatternSequencer.h  PluginGraph.cpp  PluginGraph.h
Source/Platform/: TwonkPlatformSpecific.cpp  TwonkPlatformSpecific.h
Source/Resources/: CMakeLists.txt  Default.generic.twonk  backupsettings.conf
Source/UI/: GraphDocument.cpp  GraphDocument.h  GraphEditorPanel.cpp  GraphEditorPanel.h  MainHostWindow.cpp  MainHostWindow.h  PlaybackComponent.cpp  PlaybackComponent.h  PluginDefaultEditor.cpp  PluginDefaultEditor.h  PluginListWindow.cpp  PluginListWindow.h  PluginWindow.cpp  PluginWindow.h  TwonkAudioSettingsMenu.cpp  TwonkAudioSettingsMenu.h  TwonkBubbleComponent.cpp  TwonkBubbleComponent.h  TwonkBubbleComponentLabel.cpp  TwonkBubbleComponentLabel.h  TwonkBubbleNodeComponent.cpp  TwonkBubbleNodeComponent.h  TwonkFileMenu.cpp  TwonkFileMenu.h  TwonkFilterComponent.cpp  TwonkFilterComponent.h  TwonkFilterComponentPin.cpp  TwonkFilterComponentPin.h  TwonkFilterConnector.cpp  TwonkFilterConnector.h  TwonkFilterPopupProperties.cpp  TwonkFilterPopupProperties.h  TwonkFilterPopupPropertiesSegment.cpp  TwonkFilterPopupPropertiesSegment.h  TwonkFilterPropertiesEditor.cpp  TwonkFilterPropertiesEditor.h  TwonkLookAndFeel.cpp  TwonkLookAndFeel.h  TwonkMidiKeyboard.cpp  TwonkMidiKeyboard.h  (+24 more)
midiLooper/JuceLibraryCode/: AppConfig.h  JuceHeader.h
midiLooper/Source/: MidiLoop.h  PizLooper.cpp  PizLooper.h  PizLooperProcessing.cpp  VSTSlider.cpp  VSTSlider.h  piz_MidiMessageSequence.h
vst3sdk/: .gitmodules
(+292 files in other folders)
